UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <label>MRC</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>