UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/MRC_Discount_Applied_By__c.field-meta.xml
<CustomField>
    <fullName>MRC_Discount_Applied_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captured MRC discount applied by info for wholesale app</description>
    <label>MRC Discount Applied By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>