UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/MRC_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>MRC_Discount_Type__c</fullName>
    <description>Discount type selected for the wholesale quote item</description>
    <label>MRC Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>