UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/MTSO_LATA__c.field-meta.xml
<CustomField>
    <fullName>MTSO_LATA__c</fullName>
    <label>MTSO LATA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>