UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/NetNewMRR__c.field-meta.xml
<CustomField>
    <fullName>NetNewMRR__c</fullName>
    <label>NetNewMRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>