UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/NoICB__c.field-meta.xml
<CustomField>
    <fullName>NoICB__c</fullName>
    <formula>Products__r.NoICB__c</formula>
    <label>NoICB</label>
    <type>Checkbox</type>
</CustomField>