UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/NOICB_Flag__c.field-meta.xml
<CustomField>
    <fullName>NOICB_Flag__c</fullName>
    <label>NOICB Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>