UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Non_Adjusted_MRC__c.field-meta.xml
<CustomField>
    <fullName>Non_Adjusted_MRC__c</fullName>
    <label>Non-Adjusted MRC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>