UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/NPA__c.field-meta.xml
<CustomField>
    <fullName>NPA__c</fullName>
    <label>NPA</label>
    <length>3</length>
    <type>Text</type>
</CustomField>