UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/NPA_NXX__c.field-meta.xml
<CustomField>
    <fullName>NPA_NXX__c</fullName>
    <label>NPA/NXX</label>
    <length>25</length>
    <type>Text</type>
</CustomField>