UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/NPV_Net_Present_Value__c.field-meta.xml
<CustomField>
    <fullName>NPV_Net_Present_Value__c</fullName>
    <label>NPV (Net Present Value)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>