UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/NRC_Discount_Applied_By__c.field-meta.xml
<CustomField>
    <fullName>NRC_Discount_Applied_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures NRC discount applied by info for wholesale app</description>
    <label>NRC Discount Applied By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Items3</relationshipName>
    <type>Lookup</type>
</CustomField>