UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/NRC_Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>NRC_Discount_Type__c</fullName>
    <description>NRC discount type selected while applying a discount. Used for wholesale app.</description>
    <label>NRC Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>