UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/NRC_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>NRC_Item_Code__c</fullName>
    <description>NRC item code that stores the nrc usoc for wholesale products</description>
    <label>NRC Item Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>