UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>text( SterlingQuote__r.OpportunityId__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>