UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <formula>SterlingQuote__r.OpportunityId__r.Id</formula>
    <label>OpportunityId</label>
    <type>Text</type>
</CustomField>