UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemId__c</fullName>
    <label>Opportunity Line Item ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>