UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Overall_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Quote_Status__c</fullName>
    <description>Status for Approval to pass to Opportunity to lock Close/Won</description>
    <label>Overall Quote Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>