UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/OverallStatus__c.field-meta.xml
<CustomField>
    <fullName>OverallStatus__c</fullName>
    <label>OverallStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>INA Accepted</fullName>
            </value>
            <value>
                <fullName>INA Rejected</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Pending - Business Decision Support</fullName>
            </value>
            <value>
                <fullName>Pending - Credit</fullName>
            </value>
            <value>
                <fullName>Pending - Engineering Wireless</fullName>
            </value>
            <value>
                <fullName>Pending - Engineering Wireless Final</fullName>
            </value>
            <value>
                <fullName>Pending - Finance</fullName>
            </value>
            <value>
                <fullName>Pending - INA</fullName>
            </value>
            <value>
                <fullName>Pending - Post Completion Audit Finance</fullName>
            </value>
            <value>
                <fullName>Pending - Post Completion Audit Originator</fullName>
            </value>
            <value>
                <fullName>Pending - Post Engineering Originator</fullName>
            </value>
            <value>
                <fullName>Pending - Post Engineering originator Wireless</fullName>
            </value>
            <value>
                <fullName>Pending - Regional President</fullName>
            </value>
            <value>
                <fullName>Pending - Sales Engineering</fullName>
            </value>
            <value>
                <fullName>Pending - Site Verification</fullName>
            </value>
            <value>
                <fullName>Pending - State VP</fullName>
            </value>
            <value>
                <fullName>Pending - Wireless Management</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Pending SIFT Status</fullName>
            </value>
            <value>
                <fullName>Pending SIFT Status-ON HOLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>