UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Owner_manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_manager__c</fullName>
    <formula>IF(Owner:User.Manager_Name__c = &quot; &quot;, Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName , Owner:User.Manager_Name__c)</formula>
    <label>Owner manager</label>
    <type>Text</type>
</CustomField>