UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Owner_Manager_id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Manager_id__c</fullName>
    <formula>ItemOwner__r.Manager.Id</formula>
    <label>Owner_Manager_id</label>
    <type>Text</type>
</CustomField>