UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/PA_AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>PA_AddressLine3__c</fullName>
    <label>PA-Address Line3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>