UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Package_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Package_Type_Field__c</fullName>
    <label>Package Type Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sitetracker__Tags</valueSetName>
    </valueSet>
</CustomField>