UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>