UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/PercentageDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>PercentageDiscountAmount__c</fullName>
    <label>Percentage Discount Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>