UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/PNum__c.field-meta.xml
<CustomField>
    <fullName>PNum__c</fullName>
    <description>Wholesale Product rates source PNUM</description>
    <label>PNum</label>
    <length>100</length>
    <type>Text</type>
</CustomField>