UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <formula>PA_AddressLine1__c  + &apos; &apos; +  PA_AddressLine2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Address</label>
    <type>Text</type>
</CustomField>