UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Postal_Area__c.field-meta.xml
<CustomField>
    <fullName>Postal_Area__c</fullName>
    <formula>Locality__c +&apos; &apos;+ StateProvince__c +&apos; &apos;+ Postcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Area</label>
    <type>Text</type>
</CustomField>