UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Pricebook_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_Id__c</fullName>
    <label>Pricebook Entry Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>