UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Primary_Competitor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor_Amount__c</fullName>
    <label>Primary Competitor Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>