UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/PriorStatus__c.field-meta.xml
<CustomField>
    <fullName>PriorStatus__c</fullName>
    <label>PriorStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved - Business Decision Support</fullName>
            </value>
            <value>
                <fullName>Approved - Credit</fullName>
            </value>
            <value>
                <fullName>Approved - Engineering Wireless</fullName>
            </value>
            <value>
                <fullName>Approved - Engineering Wireless Final</fullName>
            </value>
            <value>
                <fullName>Approved - Finance</fullName>
            </value>
            <value>
                <fullName>Approved - INA</fullName>
            </value>
            <value>
                <fullName>Approved - INA Renewals</fullName>
            </value>
            <value>
                <fullName>Approved - Post Completion Audit Finance</fullName>
            </value>
            <value>
                <fullName>Approved - Post Completion Audit Originator</fullName>
            </value>
            <value>
                <fullName>Approved - Post Engineering Originator</fullName>
            </value>
            <value>
                <fullName>Approved - Post Engineering Originator Wireless</fullName>
            </value>
            <value>
                <fullName>Approved - Sales Engineering</fullName>
            </value>
            <value>
                <fullName>Approved - Site Verification</fullName>
            </value>
            <value>
                <fullName>Approved - State VP</fullName>
            </value>
            <value>
                <fullName>Approved - Regional President</fullName>
            </value>
            <value>
                <fullName>Approved - Wireless Management</fullName>
            </value>
            <value>
                <fullName>Approved - Wireless Management Manager</fullName>
            </value>
            <value>
                <fullName>Assigned - Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Approved - Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>