UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Product_Name_Quote__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Quote__c</fullName>
    <label>Product Name (Quote)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>