UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Product_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Schedule_Type__c</fullName>
    <description>Product Schedule Type for CLM</description>
    <formula>TEXT(Products__r.Schedule_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Schedule Type</label>
    <type>Text</type>
</CustomField>