UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>