UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/promoDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>promoDiscountAmount__c</fullName>
    <label>promoDiscountAmount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>