UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/promoExpDate__c.field-meta.xml
<CustomField>
    <fullName>promoExpDate__c</fullName>
    <label>promoExpDate</label>
    <type>DateTime</type>
</CustomField>