UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/qos__c.field-meta.xml
<CustomField>
    <fullName>qos__c</fullName>
    <label>QOS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>