UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Quote_Synced__c.field-meta.xml
<CustomField>
    <fullName>Quote_Synced__c</fullName>
    <formula>SterlingQuote__r.IsSyncing__c</formula>
    <label>Quote Synced</label>
    <type>Checkbox</type>
</CustomField>