UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created to create a relationship between the Quote Item Object and Opportunity.</description>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>