UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Renewal_MRR__c.field-meta.xml
<CustomField>
    <fullName>Renewal_MRR__c</fullName>
    <formula>NetNewMRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>