UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Requested_Due_Date1__c.field-meta.xml
<CustomField>
    <fullName>Requested_Due_Date1__c</fullName>
    <formula>DATEVALUE( RequestedDueDateNew__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Due Date</label>
    <type>Date</type>
</CustomField>