UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/RequestedDueDateNew__c.field-meta.xml
<CustomField>
    <fullName>RequestedDueDateNew__c</fullName>
    <label>Requested Due Date</label>
    <type>DateTime</type>
</CustomField>