UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SA_BuildingName__c.field-meta.xml
<CustomField>
    <fullName>SA_BuildingName__c</fullName>
    <label>SA BuildingName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>