UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SA_StreetName__c.field-meta.xml
<CustomField>
    <fullName>SA_StreetName__c</fullName>
    <label>SA StreetName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>