UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SA_StreetPostDirection__c.field-meta.xml
<CustomField>
    <fullName>SA_StreetPostDirection__c</fullName>
    <label>SA - Street Post Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>