UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SA_StreetSubDescription__c.field-meta.xml
<CustomField>
    <fullName>SA_StreetSubDescription__c</fullName>
    <label>SA StreetSubDescription</label>
    <length>20</length>
    <type>Text</type>
</CustomField>