UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SA_SubDivision__c.field-meta.xml
<CustomField>
    <fullName>SA_SubDivision__c</fullName>
    <label>SA SubDivision</label>
    <length>10</length>
    <type>Text</type>
</CustomField>