UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SA_unitDesignator__c.field-meta.xml
<CustomField>
    <fullName>SA_unitDesignator__c</fullName>
    <label>SA unitDesignator</label>
    <length>10</length>
    <type>Text</type>
</CustomField>