UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SalesEngineer__c.field-meta.xml
<CustomField>
    <fullName>SalesEngineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesEngineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>