UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <formula>SA_StreetNrFirst__c +&apos; &apos;+SA_StreetDirection__c +&apos; &apos;+SA_StreetName__c +&apos; &apos;+ SA_StreetSubDescription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Address</label>
    <type>Text</type>
</CustomField>