UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ServiceControlNumber__c.field-meta.xml
<CustomField>
    <fullName>ServiceControlNumber__c</fullName>
    <label>Service Control Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>