UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ServiceSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>ServiceSequenceNumber__c</fullName>
    <label>Service Sequence Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>