UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OOF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>