UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SetNextApprover__c.field-meta.xml
<CustomField>
    <fullName>SetNextApprover__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Control when trigger for approval process runs. Set on by field update and set off at end of trigger.</description>
    <label>SetNextApprover</label>
    <type>Checkbox</type>
</CustomField>