UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ShanePoke__c.field-meta.xml
<CustomField>
    <fullName>ShanePoke__c</fullName>
    <description>This is a temporary field used by Shane Baumgartner for an MRR-related data correction.</description>
    <label>ShanePoke</label>
    <length>255</length>
    <type>Text</type>
</CustomField>