UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SIFT_InquiryId__c.field-meta.xml
<CustomField>
    <fullName>SIFT_InquiryId__c</fullName>
    <label>SIFT InquiryId</label>
    <length>7</length>
    <type>Text</type>
</CustomField>