UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/SIFT_Required__c.field-meta.xml
<CustomField>
    <fullName>SIFT_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIFT Required</label>
    <type>Checkbox</type>
</CustomField>