UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <label>Site ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>