UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ST_AddressID__c.field-meta.xml
<CustomField>
    <fullName>ST_AddressID__c</fullName>
    <label>Address Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>