UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ST_LineKey__c.field-meta.xml
<CustomField>
    <fullName>ST_LineKey__c</fullName>
    <label>Order Line Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>