UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ST_SKU__c.field-meta.xml
<CustomField>
    <fullName>ST_SKU__c</fullName>
    <label>ST SKU</label>
    <length>120</length>
    <type>Text</type>
</CustomField>