UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/StandardNRC__c.field-meta.xml
<CustomField>
    <fullName>StandardNRC__c</fullName>
    <label>Standard NRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>