UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <label>StateProvince</label>
    <length>15</length>
    <type>Text</type>
</CustomField>